test.txt
nc -zv 192.168.20.17 3306
python3 -c "import pymysql; from config import PRODUCTION_DB as C; conn=pymysql.connect(host=C['host'],port=C['port'],user=C['user'],password=C['password'],database=C['database'],connect_timeout=3); print('OK'); conn.close()"

pi@raspberrypi:~ $ python3 -c "import pymysql; from config import PRODUCTION_DB as C; conn=pymysql.connect(host=C['host'],port=C['port'],user=C['user'],password=C['password'],database=C['database'],connect_timeout=3); print('OK'); conn.close()"
Traceback (most recent call last):
  File "<string>", line 1, in <module>
ModuleNotFoundError: No module named 'config'
pi@raspberrypi:~ $ python3 -c /home/pi/gwim-scanner  "import pymysql; from config import PRODUCTION_DB as C; conn=pymysql.connect(host=C['host'],port=C['port'],user=C['user'],password=C['password'],database=C['database'],connect_timeout=3); print('OK'); conn.close()"
  File "<string>", line 1
    /home/pi/gwim-scanner
    ^
SyntaxError: invalid syntax
pi@raspberrypi:~ $ python3 -c home/pi/gwim-scanner  "import pymysql; from config import PRODUCTION_DB as C; conn=pymysql.connect(host=C['host'],port=C['port'],user=C['user'],password=C['password'],database=C['database'],connect_timeout=3); print('OK'); conn.close()"
Traceback (most recent call last):
  File "<string>", line 1, in <module>
NameError: name 'home' is not defined
